fix: overflow

--- a/src/shared/modals/BlockModal/BlockModal.css
+++ b/src/shared/modals/BlockModal/BlockModal.css
@@ -15,7 +15,7 @@
   transform: translate(-50%, -50%);
   width: 540px;
   max-height: 90vh;
-  overflow: scroll;
+  overflow: auto;
   padding: 30px 40px;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
